themes/climatecolab-theme/src/main/webapp/css/style/components/_blueheaderbar.scss
//TODO: refactor this and move the portlet specific code to the respective portlets

thead.blueheaderbar {
  background: $primary-light-grey;
  border-bottom: 1px solid $primary-grey;
  color: $darkest-grey;
  //TODO: there seems to be no compass mixin for position: sticky yet
  position: -webkit-sticky;
  position: sticky;
}

.blueheaderbar {
  height: 37px;
  background: $primary-light-grey;
  border-bottom: 1px solid $primary-grey;
  color: $darkest-grey;
}

.blueheaderbar a {
  font-weight: normal;
}

/* list page */
.blueheaderbar .contest {
  float: left;
  width: 404px;
  height: 37px;
  padding-left: 9px;
}

.blueheaderbar .contest a {
  padding-top: 10px;
  height: 27px;
  display: inline-block;
}

.blueheaderbar .proposal {
  float: left;
  width: 56px;
  height: 37px;
  position: relative;
}

.blueheaderbar .proposal .sort-arrow {
  position: absolute;
  top: 15px;
}

.blueheaderbar .proposal a {
  background: url(../images/icon-list-proposals.png) no-repeat 9px 7px;
  width: 33px;
  height: 37px;
  display: inline-block;
}

.blueheaderbar .comment {
  float: left;
  width: 60px;
  height: 37px;
  position: relative;
}

.blueheaderbar .comment .sort-arrow {
  position: absolute;
  top: 15px;
}

.blueheaderbar .comment a {
  background: url(../images/icon-list-comment.png) no-repeat 9px 8px;
  width: 33px;
  height: 37px;
  display: inline-block;
}

.blueheaderbar .voteslist {
  float: left;
  width: 55px;
  height: 37px;
  position: relative;
}

.blueheaderbar .voteslist .sort-arrow {
  position: absolute;
  top: 15px;
}

.blueheaderbar .voteslist a {
  background: url(../images/icon-proposal-vote.png) no-repeat 0 7px;
  width: 20px;
  height: 37px;
  display: inline-block;
}

.blueheaderbar .what {
  float: left;
  width: 151px;
  height: 37px;
  background: url(../images/icon-list-what.png) no-repeat 10px 6px;
}

.blueheaderbar .what a {
  height: 27px;
  padding-top: 10px;
  margin-left: 41px;
  display: inline-block;
}

.blueheaderbar .where {
  float: left;
  width: 177px;
  height: 37px;
  background: url(../images/icon-list-where.png) no-repeat 10px 6px;
}

.blueheaderbar .where a {
  height: 27px;
  padding-top: 10px;
  margin-left: 41px;
  display: inline-block;
}

.blueheaderbar .who {
  float: left;
  width: 139px;
  height: 37px;
  background: url(../images/icon-list-who.png) no-repeat 10px 6px;
}

.blueheaderbar .who a {
  height: 27px;
  padding-top: 10px;
  margin-left: 33px;
  display: inline-block;
}

.blueheaderbar .how {
  float: left;
  padding: 0;
  width: 105px;
  height: 37px;
  background: url(../images/contest-icon-how.png) no-repeat 10px 6px;
}

.blueheaderbar .how a {
  height: 27px;
  padding-top: 10px;
  margin-left: 33px;
  display: inline-block;
}

/* users/members page */
.blueheaderbar .user {
  float: left;
  width: 330px;
  height: 37px;
}

.blueheaderbar .user a {
  font-weight: bold;
  padding-top: 10px;
  height: 27px;
  display: inline-block;
}

.blueheaderbar .points {
  float: left;
  width: 88px;
  height: 37px;
  padding-left: 11px;
}

.blueheaderbar .points a {
  font-weight: bold;
  height: 27px;
  padding-top: 10px;
  margin-left: 10px;
  display: inline-block;
}

.blueheaderbar .activity {
  float: left;
  width: 80px;
  height: 37px;
}

.blueheaderbar .activity a {
  font-weight: bold;
  height: 27px;
  padding-top: 10px;
  margin-left: 10px;
  display: inline-block;
}

.blueheaderbar .category {
  float: left;
  width: 108px;
  height: 37px;
}

.blueheaderbar .category a {
  font-weight: bold;
  height: 27px;
  padding-top: 10px;
  margin-left: 15px;
  display: inline-block;
}

.blueheaderbar .seniority {
  float: left;
  width: 121px;
  height: 37px;
}

.blueheaderbar .seniority a {
  font-weight: bold;
  height: 27px;
  padding-top: 10px;
  margin-left: 10px;
  display: inline-block;
}

/* proposal page */
.blueheaderbar .proposalname {
  float: left;
  width: 645px;
  height: 37px;
  padding-left: 9px;
}

.blueheaderbar.completed .proposalname {
  width: 765px;
}

.blueheaderbar .proposalname a {
  padding-top: 10px;
  height: 27px;
  display: inline-block;
}

.blueheaderbar .thumbs {
  float: left;
  width: 67px;
  height: 37px;
  position: relative;
  text-align: center;
}

.blueheaderbar .thumbs .sort-arrow {
  position: absolute;
  top: 15px;
}

.blueheaderbar .thumbs a {
  background: url(../images/icon-proposal-thumb.png) no-repeat 0 7px;
  width: 20px;
  height: 37px;
  display: inline-block;
}

.blueheaderbar .votes {
  float: left;
  width: 67px;
  height: 37px;
  position: relative;
  text-align: center;
}

.blueheaderbar .votes .sort-arrow {
  position: absolute;
  top: 15px;
}

.blueheaderbar .votes a {
  background: url(../images/icon-proposal-vote.png) no-repeat 0 7px;
  width: 20px;
  height: 37px;
  display: inline-block;
}

.blueheaderbar .propcomm {
  float: left;
  width: 65px;
  height: 37px;
  position: relative;
  text-align: center;
}

.blueheaderbar .propcomm .sort-arrow {
  position: absolute;
  top: 15px;
}

.blueheaderbar .propcomm a {
  background: url(../images/icon-list-comment.png) no-repeat 0 8px;
  width: 24px;
  height: 37px;
  display: inline-block;
}

.blueheaderbar .modified {
  float: left;
  width: 85px;
  height: 37px;
  text-align: center;
}

.blueheaderbar .modified a {
  padding-top: 10px;
  height: 27px;
  display: inline-block;
}

.blueheaderbar .contributor {
  float: left;
  width: 106px;
  height: 37px;
  text-align: center;
}

.blueheaderbar .contributor a {
  padding-top: 10px;
  height: 27px;
  display: inline-block;
}

.blueheaderbar .judgefellow {
  float: left;
  height: 37px;
  width: 159px;
  position: relative;
  text-align: center;
}

.blueheaderbar .judgefellow a {
  font-size: 0.9em
}

/* contest page */
.blueheaderbar .contestbar {
  padding: 11px 0 0 14px;
  position: relative;
}

.contestSubscribe {
  position: absolute;
  right: 20px;
  top: 6px;
}

/* the shadeed div below the bluebar */
.shadebar {
  background: url(../images/tableshade.png) repeat-x;
  height: 4px;
  position: relative;
  z-index: 9;
}

